--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,13 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: url('../public/fonts/Lato-Regular.ttf');
-  font-style: normal;
-}
-
-a {
-  text-decoration: none;
-}
-
-ul li {
-  list-style: none;
-}
-
 body {
-  font-family: 'Lato', sans-serif;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: 'Lato', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
