--- a/src/components/serviceCard/serviceCard.scss
+++ b/src/components/serviceCard/serviceCard.scss
@@ -21,6 +21,9 @@
 }
 
 .material {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   width: 223px;
   height: 120px;
   margin-top: 10px;
