--- a/src/pages/gallery/styles/gallery.css
+++ b/src/pages/gallery/styles/gallery.css
@@ -1,10 +1,14 @@
 .card {
   border: 1px #0B191A solid;
   border-radius: 2px;
+  -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
 .card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 5px #ccc;
-}/*# sourceMappingURL=gallery.css.map */
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-box-shadow: 0 0 5px #ccc;
+          box-shadow: 0 0 5px #ccc;
+}
+/*# sourceMappingURL=gallery.css.map */
