--- a/src/pages/mainpage/mainpage.css
+++ b/src/pages/mainpage/mainpage.css
@@ -9,47 +9,73 @@
 }
 
 .items {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 290px 290px 290px;
-  grid-template-rows: 150px 150px;
+  -ms-grid-columns: 290px 290px 290px;
+      grid-template-columns: 290px 290px 290px;
+  -ms-grid-rows: 150px 150px;
+      grid-template-rows: 150px 150px;
 }
 
 .item {
   padding-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   gap: 40px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .a {
+  -ms-grid-column: 1;
   grid-column: 1;
+  -ms-grid-row: 1;
   grid-row: 1;
 }
 
 .b {
+  -ms-grid-column: 2;
   grid-column: 2;
+  -ms-grid-row: 1;
   grid-row: 1;
 }
 
 .c {
+  -ms-grid-column: 1;
   grid-column: 1;
+  -ms-grid-row: 2;
   grid-row: 2;
 }
 
 .d {
+  -ms-grid-column: 2;
   grid-column: 2;
+  -ms-grid-row: 2;
   grid-row: 2;
 }
 
 .e {
+  -ms-grid-column: 3;
   grid-column: 3;
-  grid-row: 1/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
 }
 
 .description {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .animate__animated.animate__bounce {
@@ -59,4 +85,5 @@
 .gallery {
   padding-left: calc(50% - 400px);
   padding-right: calc(50% - 400px);
-}/*# sourceMappingURL=mainpage.css.map */
+}
+/*# sourceMappingURL=mainpage.css.map */
