--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,4 +9,5 @@
   width: 100%;
   height: 2300px;
   background-color: #899D9D;
-}/*# sourceMappingURL=App.css.map */
+}
+/*# sourceMappingURL=App.css.map */
