--- a/src/pages/mainpage/mainpage.scss
+++ b/src/pages/mainpage/mainpage.scss
@@ -102,3 +102,11 @@
 .AnimationOnScrollRight {
   animation: bounceInRight 3s;
 }
+
+@media (min-width: 768px) and (max-width: 1024px) { //tablet
+  /* … */
+}
+
+@media (min-width: 425px) and (max-width: 767px) { //mobile
+  /* … */
+}
