--- a/src/components/serviceCard/serviceCard.scss
+++ b/src/components/serviceCard/serviceCard.scss
@@ -139,3 +139,23 @@ $colorOfMainHeader: #ffffff;
   transition-delay: 0ms !important;
   }
   }
+
+  @media screen and (min-width: 1025px) { //desktop 
+    //
+  }
+  
+  @media screen and (min-width: 768px) and (max-width: 1024px) { /* tablet */
+    .card {
+      padding: 7rem 0 0;
+    }
+    .card-title::after {
+      display: none;
+      }
+    .card-body {
+        display: none;
+    }
+  }
+  
+  @media screen and (min-width: 425px) and (max-width: 767px) { //mobile
+    /* … */
+  }
