--- a/src/components/serviceList/serviceList.css
+++ b/src/components/serviceList/serviceList.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .wrap {
   width: 100%;
   height: 2300px;
@@ -96,5 +97,17 @@
 .AnimationOnScrollLeft {
   -webkit-animation: bounceInLeft 3s;
           animation: bounceInLeft 3s;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  /* tablet */
+  .cardsWrapper {
+    -ms-grid-columns: 230px 230px 230px;
+        grid-template-columns: 230px 230px 230px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  /* … */
 }
 /*# sourceMappingURL=serviceList.css.map */
